plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'com.souzip'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	asciidoctorExt
}

repositories {
	mavenCentral()
}

ext {
	snippetsDir = file('build/generated-snippets')
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	runtimeOnly 'org.springframework.boot:spring-boot-docker-compose'

	runtimeOnly 'org.postgresql:postgresql'

	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-database-postgresql'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	implementation 'io.micrometer:micrometer-registry-prometheus'

	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.529'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	testImplementation 'com.h2database:h2'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.1'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
}

def generatedDir = 'build/generated/sources/annotationProcessor/java/main'

tasks.withType(JavaCompile).configureEach {
	options.getGeneratedSourceOutputDirectory().set(file(generatedDir))
}

sourceSets {
	main.java.srcDirs += [generatedDir]
}

clean {
	delete file(generatedDir)
}

tasks.named('test') {
	outputs.dir snippetsDir
	useJUnitPlatform()
}

def appDocsOutDir = file("$buildDir/docs/app")
def adminDocsOutDir = file("$buildDir/docs/admin")

tasks.register('asciidoctorApp', org.asciidoctor.gradle.jvm.AsciidoctorTask) {
	group = 'documentation'
	description = 'Generate App API docs (Asciidoctor)'

	inputs.dir snippetsDir
	configurations 'asciidoctorExt'
	dependsOn tasks.named('test')

	baseDirFollowsSourceFile()

	sourceDir = file('src/docs/asciidoc/app')
	sources { include 'index.adoc' }

	outputDir = appDocsOutDir
}

tasks.register('asciidoctorAdmin', org.asciidoctor.gradle.jvm.AsciidoctorTask) {
	group = 'documentation'
	description = 'Generate Admin API docs (Asciidoctor)'

	inputs.dir snippetsDir
	configurations 'asciidoctorExt'
	dependsOn tasks.named('test')

	baseDirFollowsSourceFile()

	sourceDir = file('src/docs/asciidoc/admin')
	sources { include 'index.adoc' }

	outputDir = adminDocsOutDir
}

tasks.named('bootJar') {
	dependsOn tasks.named('asciidoctorApp'), tasks.named('asciidoctorAdmin')

	from(appDocsOutDir) {
		into 'static/docs/app'
	}
	from(adminDocsOutDir) {
		into 'static/docs/admin'
	}
}

tasks.register('copyDocsApp', Copy) {
	group = 'documentation'
	description = 'Copy App docs to src/main/resources/static/docs/app'
	dependsOn tasks.named('asciidoctorApp')
	from appDocsOutDir
	into file("src/main/resources/static/docs/app")
}

tasks.register('copyDocsAdmin', Copy) {
	group = 'documentation'
	description = 'Copy Admin docs to src/main/resources/static/docs/admin'
	dependsOn tasks.named('asciidoctorAdmin')
	from adminDocsOutDir
	into file("src/main/resources/static/docs/admin")
}
